--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "WebDatabase":"Server=127.0.0.1;Database=Web;User ID=Web;Password=123456;TrustServerCertificate=true" }
+  "ConnectionStrings": { "WebDatabase": "Server=127.0.0.1;Database=Web_Identity;User ID=Web;Password=123456;TrustServerCertificate=true" }
 }
